# lpbf-monitoring

./: .gitignore  README.md  pyproject.toml  requirements.txt  scratch-plots.py  setup.cfg  tox.ini
.github/workflows/: tests.yml
Readers/: ParseDirectory.py  config.ini  renishawReader.py
analysis/: LayerVisuals.py  monitoring_layer007.json
deprecated-scripts/: plot_monitoring.py  scale-factor-pyplot.py  slm-fixer.py
dev/: Layer.py  matrixTransformation.ipynb  other_libs.txt  plot-common-meltpool.py  scratch.py  time-summary.py
dev/Readers/: sigmaReader.py
dev/analysis/: dashboards-machine-data.ipynb
dev/deprecated-scripts/: eos-fixer.py
dev/porosity/: MonitoringPorosity.py
dev/time-stamps/: find_interlayer_slm.py  find_time_stamp.py  interlayer_time_aconity.py
spatial-transformations/: contourSegmenter.py  distance-calculator.py  scale-factor.py
src/LayerKinematics/: Layer.py  LayerKinematics.py
src/Readers/: aconityReader.py  mpmReader.py
src/analysis/: LayerKinematics.py  kinematics_summary.xlsx
src/deprecated-scripts/: renishaw-fixer.py
test/: test_layer.py
