[metadata]
name = lpbf-monitoring
author = Brayant Lopez
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages =
    LayerKinematics
install_requires =
    pandas
    numpy
    matplotlib
    plotly


python_requires = >=3.6
package_dir =
    =src
zip_safe = False

;[options.extra_require]
;testing =
;    pytest>=6.0
;    pytest-cov>=2.0
;    mypy>=0.910
;    flake8>=3.9
;    tox>=3.24
;
;[options.package_data]
;LayerKinematics = py.typed
;
;[flake8]
;max-line-length = 180
